@@ -64,8 +64,8 @@ samples/mfc/MfcVC.dsw
 samples/minimal/MinimalVC.dsp
 samples/minimal/MinimalVC.dsw
 
-samples/minimal/MiniframVC.dsp
-samples/minimal/MiniframVC.dsw
+samples/minifram/MiniframVC.dsp
+samples/minifram/MiniframVC.dsw
 
 samples/nativdlg/NativdlgVC.dsp
 samples/nativdlg/NativdlgVC.dsw
